NJH-374 refactor: Pagination type 재사용
