# src/swagger.json
@@ -1259,7 +1259,7 @@
             "schema": {
               "$ref": "#/components/schemas/FindCompetitionsReqQuery"
             },
-            "description": "",
+            "description": "FindCompetitionsReqQuery",
             "required": true
           }
         ],
@@ -1277,7 +1277,7 @@
           }
         },
         "summary": "u-5-1 findCompetitions",
-        "description": "u-5-1 findCompetitions.\n- RoleLevel: PUBLIC.\n- ACTIVE 상태인 competition 들을 조회합니다.\n\nQuery: FindCompetitionsReqQuery\n- page: 현제 페이지 번호입니다. 최초 요청 시에는 0을 사용합니다. (default: 0).\n- limit: 한페이지에 표시할 데이터 갯수. (default: 10).\n- dateFilter: 대회 날짜를 기준으로 필터링합니다. ex) '2023-04'. (default: Now).\n- locationFilter: 대회가 열리는 위치로 필터링합니다. ex) 서울, 부산, 인천, 대구, 대전, 광주, 울산, 세종, 경기, 충북, 충남, 전남, 경북, 경남, 강원, 전북, 제주.\n- selectFilter: 태그를 기준으로 필터링합니다. ex) ['간편결제', '얼리버드', '신청가능', '단독출전조정'].\n- sortOption: 대회를 정렬하는 옵션입니다. ex) '일자순', '조회순', '마감임박순'. (default: '일자순').",
+        "description": "u-5-1 findCompetitions.\n- RoleLevel: PUBLIC.\n- ACTIVE 상태인 competition 들을 조회합니다.",
         "x-nestia-namespace": "user.competitions.findCompetitions",
         "x-nestia-jsDocTags": [
           {
@@ -1285,6 +1285,23 @@
             "text": [
               {
                 "text": "u-5 competitions",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "query",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "FindCompetitionsReqQuery",
                 "kind": "text"
               }
             ]
@@ -1424,7 +1441,7 @@
             "schema": {
               "$ref": "#/components/schemas/FindCompetitionsReqQuery"
             },
-            "description": "",
+            "description": "FindCompetitionsReqQuery",
             "required": true
           }
         ],
@@ -1442,7 +1459,7 @@
           }
         },
         "summary": "a-5-2 findCompetitions",
-        "description": "a-5-2 findCompetitions.\n- RoleLevel: ADMIN.\n- ACTIVE, INACTIVE 상태인 competition 들을 조회합니다.\n\nQuery: FindCompetitionsReqQuery\n- page: 현제 페이지 번호입니다. 최초 요청 시에는 0을 사용합니다. (default: 0).\n- limit: 한페이지에 표시할 데이터 갯수. (default: 10).\n- dateFilter: 대회 날짜를 기준으로 필터링합니다. ex) '2023-04'. (default: Now).\n- locationFilter: 대회가 열리는 위치로 필터링합니다. ex) 서울, 부산, 인천, 대구, 대전, 광주, 울산, 세종, 경기, 충북, 충남, 전남, 경북, 경남, 강원, 전북, 제주.\n- selectFilter: 태그를 기준으로 필터링합니다. ex) ['간편결제', '얼리버드', '신청가능', '단독출전조정'].\n- sortOption: 대회를 정렬하는 옵션입니다. ex) '일자순', '조회순', '마감임박순'. (default: '일자순').",
+        "description": "a-5-2 findCompetitions.\n- RoleLevel: ADMIN.\n- ACTIVE, INACTIVE 상태인 competition 들을 조회합니다.",
         "x-nestia-namespace": "admin.competitions.findCompetitions",
         "x-nestia-jsDocTags": [
           {
@@ -1450,6 +1467,23 @@
             "text": [
               {
                 "text": "a-5 competitions",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "query",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "FindCompetitionsReqQuery",
                 "kind": "text"
               }
             ]
@@ -2076,7 +2110,7 @@
             "schema": {
               "$ref": "#/components/schemas/FindCompetitionsReqQuery"
             },
-            "description": "",
+            "description": "FindCompetitionsReqQuery",
             "required": true
           }
         ],
@@ -2094,7 +2128,7 @@
           }
         },
         "summary": "h-5-1 findCompetitions",
-        "description": "h-5-1 findCompetitions.\n- RoleLevel: HOST.\n- 본인이 주최한 대회들을 조회합니다.\n- ACTIVE, INACTIVE 상태인 competition 들을 조회합니다.\n\nQuery: FindCompetitionsReqQuery\n- page: 현제 페이지 번호입니다. 최초 요청 시에는 0을 사용합니다. (default: 0).\n- limit: 한페이지에 표시할 데이터 갯수. (default: 10).\n- dateFilter: 대회 날짜를 기준으로 필터링합니다. ex) '2023-04'. (default: Now).\n- locationFilter: 대회가 열리는 위치로 필터링합니다. ex) 서울, 부산, 인천, 대구, 대전, 광주, 울산, 세종, 경기, 충북, 충남, 전남, 경북, 경남, 강원, 전북, 제주.\n- selectFilter: 태그를 기준으로 필터링합니다. ex) ['간편결제', '얼리버드', '신청가능', '단독출전조정'].\n- sortOption: 대회를 정렬하는 옵션입니다. ex) '일자순', '조회순', '마감임박순'. (default: '일자순').",
+        "description": "h-5-1 findCompetitions.\n- RoleLevel: HOST.\n- 본인이 주최한 대회들을 조회합니다.\n- ACTIVE, INACTIVE 상태인 competition 들을 조회합니다.",
         "x-nestia-namespace": "host.competitions.findCompetitions",
         "x-nestia-jsDocTags": [
           {
@@ -2102,6 +2136,23 @@
             "text": [
               {
                 "text": "h-5 competitions",
+                "kind": "text"
+              }
+            ]
+          },
+          {
+            "name": "param",
+            "text": [
+              {
+                "text": "query",
+                "kind": "parameterName"
+              },
+              {
+                "text": " ",
+                "kind": "space"
+              },
+              {
+                "text": "FindCompetitionsReqQuery",
                 "kind": "text"
               }
             ]
@@ -6973,21 +7024,20 @@
       "FindCompetitionsReqQuery": {
         "type": "object",
         "properties": {
-          "dateFilter": {
-            "type": "string",
-            "pattern": "^[0-9]{4}-[0-9]{2}$",
-            "title": "- 날짜 필터. YYYY-MM 형식입니다",
-            "description": "- 날짜 필터. YYYY-MM 형식입니다."
-          },
           "page": {
-            "type": "number",
-            "description": "현제 페이지 번호입니다. default: 0"
+            "type": "integer",
+            "minimum": 0,
+            "default": 0,
+            "title": "Page number",
+            "description": "Page number."
           },
           "limit": {
             "type": "integer",
-            "maximum": 100,
+            "maximum": 30,
             "minimum": 1,
-            "description": "한 페이지에 보여줄 아이템의 수입니다. default: 10, max: 100"
+            "default": 10,
+            "title": "Number of items per page",
+            "description": "Number of items per page."
           },
           "sortOption": {
             "type": "string",
@@ -6996,7 +7046,8 @@
               "일자순",
               "조회순"
             ],
-            "description": "대회를 정렬하는 옵션입니다. default: '일자순'\n- 일자순: 대회 날짜 순으로 정렬\n- 조회순: 조회수 순으로 정렬\n- 마감임박순: 참가 신청 마감일이 가까운 순으로 정렬"
+            "title": "대회를 정렬하는 옵션입니다",
+            "description": "대회를 정렬하는 옵션입니다.\n- 일자순: 대회 날짜 순으로 정렬\n- 조회순: 조회수 순으로 정렬\n- 마감임박순: 참가 신청 마감일이 가까운 순으로 정렬"
           },
           "locationFilter": {
             "type": "string",
@@ -7019,8 +7070,8 @@
               "충남",
               "충북"
             ],
-            "title": "- 대회가 열리는 위치로 필터링합니다",
-            "description": "- 대회가 열리는 위치로 필터링합니다."
+            "title": "대회가 열리는 위치로 필터링합니다",
+            "description": "대회가 열리는 위치로 필터링합니다.\nex ) 서울, 부산, 인천, 대구, 대전, 광주, 울산, 세종, 경기, 충북, 충남, 전남, 경북, 경남, 강원, 전북, 제주"
           },
           "selectFilter": {
             "type": "array",
@@ -7034,6 +7085,12 @@
               ]
             },
             "description": "태그를 기준으로 필터링합니다. 중복 선택 가능합니다\n- 간편결제: 간편결제 가능한 대회 (협약 대회)\n- 얼리버드: 얼리버드 할인 기간 중인 대회\n- 신청가능: 참가 신청 가능한 대회\n- 단독출전조정: 단독 참가자의 부문 조정 기간 중인 대회"
+          },
+          "dateFilter": {
+            "type": "string",
+            "pattern": "^[0-9]{4}-[0-9]{2}$",
+            "title": "- 날짜 필터. YYYY-MM 형식입니다",
+            "description": "- 날짜 필터. YYYY-MM 형식입니다."
           }
         },
         "nullable": false
@@ -7067,14 +7124,16 @@
       "FindCompetitionsRes": {
         "type": "object",
         "properties": {
+          "nextPage": {
+            "type": "number",
+            "title": "Next page number",
+            "description": "Next page number.\n다음 페이지가 존재하지 않으면 undefined."
+          },
           "competitions": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/ICompetitionForFind"
             }
-          },
-          "nextPage": {
-            "type": "number"
           }
         },
         "nullable": false,
@@ -9963,21 +10022,32 @@
         "type": "object",
         "properties": {
           "page": {
-            "type": "number",
-            "description": "현제 페이지 번호입니다. default: 0"
+            "type": "integer",
+            "minimum": 0,
+            "default": 0,
+            "title": "Page number",
+            "description": "Page number."
           },
           "limit": {
             "type": "integer",
             "maximum": 30,
             "minimum": 1,
-            "description": "한 페이지에 보여줄 아이템의 수입니다. default: 10, max: 30"
+            "default": 10,
+            "title": "Number of items per page",
+            "description": "Number of items per page."
+          },
+          "status": {
+            "type": "string",
+            "enum": [
+              "CANCELED",
+              "DONE",
+              "READY"
+            ],
+            "title": "application status filter option",
+            "description": "application status filter option.\nundefined 라면 모든 상태의 application을 조회합니다."
           }
         },
-        "nullable": false,
-        "required": [
-          "page",
-          "limit"
-        ]
+        "nullable": false
       },
       "ResponseFormFindApplicationsRes": {
         "type": "object",
@@ -10008,14 +10078,16 @@
       "FindApplicationsRes": {
         "type": "object",
         "properties": {
+          "nextPage": {
+            "type": "number",
+            "title": "Next page number",
+            "description": "Next page number.\n다음 페이지가 존재하지 않으면 undefined."
+          },
           "applications": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/IApplication"
             }
-          },
-          "nextPage": {
-            "type": "number"
           }
         },
         "nullable": false,
